# genai-insight-agent

./: .env.example  .gitignore  LICENSE  README.md  REAEDME.md  dynamodb_manager.py  generate_report.sh  manual_run.py  pyproject.toml  report_template.md  run_tasks.py
.claude/skills/genai-insight-reporter/: .gitignore  SKILL.md
.claude/skills/genai-insight-reporter/scripts/: chart_generator.py  data_analyzer.py  data_extractor.py  report_generator.py  tldr_fetcher.py
.claude/skills/genai-insight-reporter/templates/: README.md  report_template.md.j2
.claude/skills/genai-rawdata-retriever/: SKILL.md
.claude/skills/genai-rawdata-retriever/references/: data_schema.md  example_response.json  example_trend_repo_response.json
.claude/skills/genai-rawdata-retriever/scripts/: dynamodb_manager.py
.claude/skills/genai-report-mailer/: .gitignore  README.md  SKILL.md
.claude/skills/genai-report-mailer/config/: email_config.example.yaml
.claude/skills/genai-report-mailer/scripts/: send_report.py
.claude/skills/repo-admission-filter/: SKILL.md
.claude/skills/repo-admission-filter/references/: admission_rules.md  example_input.json
.claude/skills/repo-admission-filter/scripts/: admission_filter.py
bak/: dify_helper.py  manual_run.py  run_tasks.py
skills/genai-rawdata-retriever/: SKILL.md
skills/genai-rawdata-retriever/scripts/: dynamodb_manager.py
